welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if(teen(a))
         ^countTeen:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (teen(b))
          ^countTeen:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (teen(c))
          ^countTeen:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (teen(d))
          ^countTeen:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  	return true
               ^countTeen:17: warning: enclosing method teen has result type Unit: return value discarded
  	return true
        ^countTeen:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^countTeen:18: warning: enclosing method teen has result type Unit: return value discarded
  return false
  ^