welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  var compteur = 0
  if(teen(a))
		compteur = compteur +1
  if (teen(b))
  	compteur = compteur +1
  if (teen(c))
  	compteur = compteur +1
  if (teen(d))
  	compteur = compteur +1
  
  return compteur
}

def teen(a : Int){
  if (a>=13 && a<=19)
  	return true
  return false
}